test/Fail/Issue5462.agda
{-# OPTIONS --rewriting --confluence-check #-}

open import Agda.Primitive public

infix 4 _â‰£_
data _â‰£_
  {l : Level}
  {A : Set l}
  : -------------------------------
  {B : Set l}(x : A)(y : B) â†’ Set l
  where
  instance refl : {x : A} â†’ x â‰£ x

{-# BUILTIN REWRITE _â‰£_ #-}

postulate
  ğ”¸   : Set

data Swap {l : Level}(A : Set l) : Set l where
  action :
    (swap : ğ”¸ â†’ ğ”¸ â†’ A â†’ A)
    (swap-id : (a : ğ”¸)(x : A) â†’ swap a a x â‰£ x)
    â†’ -----------------------------------------
    Swap A

infix 6 _â‰€_
_â‰€_ :
  {l : Level}
  {A : Set l}
  â¦ƒ _ : Swap A â¦„
  (a b : ğ”¸)
  â†’ ------------
  A â†’ A
_â‰€_ â¦ƒ action swap _ â¦„ = swap

data Swapâ‚
  {l m : Level}
  {A : Set l}
  â¦ƒ _ : Swap A â¦„
  (B : A â†’ Set m)
  : -------------
  Set (l âŠ” m)
  where
  actionâ‚ :
    (swapâ‚ :
      (a b : ğ”¸)
      {x : A}
      â†’ -----------------
      B x â†’ B ((a â‰€ b) x))
    (swapâ‚-id :
      (a : ğ”¸)
      {x : A}
      (y : B x)
      â†’ --------------
      swapâ‚ a a y â‰£ y)
    â†’ --------------------
    Swapâ‚ B

infix 6 _â‰€â‚_
_â‰€â‚_ :
  {l m : Level}
  {A : Set l}
  â¦ƒ _ : Swap A â¦„
  {B : A â†’ Set m}
  â¦ƒ swâ‚ : Swapâ‚ B â¦„
  (a b : ğ”¸)
  {x : A}
  â†’ -----------------
  B x â†’ B ((a â‰€ b) x)
_â‰€â‚_ â¦ƒ swâ‚ = actionâ‚ swapâ‚ _ â¦„ = swapâ‚

â‰€â‚id :
  {l m : Level}
  {A : Set l}
  â¦ƒ _ : Swap A â¦„
  {B : A â†’ Set m}
  â¦ƒ swâ‚ : Swapâ‚ B â¦„
  (a : ğ”¸)
  {x : A}
  (y : B x)
  â†’ ---------------
  (a â‰€â‚ a) y â‰£ y
â‰€â‚id â¦ƒ swâ‚ = actionâ‚ _ swapâ‚-id â¦„  = swapâ‚-id

{-# REWRITE â‰€â‚id #-}
